Bug 185069 - JJ: kmail settings don't update SMTP name
Summary: JJ: kmail settings don't update SMTP name
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.11.0
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-20 23:00 UTC by Christian González
Modified: 2009-06-03 15:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian González 2009-02-20 23:00:53 UTC
Version:           1.11.0 (using 4.2.00 (KDE 4.2.0), Arch Linux)
Compiler:          gcc
OS:                Linux (i686) release 2.6.28-ARCH

Assuming that you have set up at least one identity and SMTP account, do the following:

Settings->Configure Kmail...->Accounts->"Sending" tab -> 
double click the account -> change the name to something else, click OK.

KMail says you that the Identity "xy" has been changed according to this setting.
Click OK.
Now you can see the SMTP account overview again.
The name of the account has NOT changed.
(maybe in the background, and just the widget didn't refresh)
closing and opening the Settings window shows the new name.

AND, under Identities->Advanced->"Special transport"
the name did not change as well, it's the old one.

Shouldn't be hard to fix this IMO. (but I don't know C++/Qt)
Comment 1 Morten Sjoegren 2009-05-01 12:54:20 UTC
It works for me.
I use KDE4.2.2, KMail 1.11.2 on a Gentoo box.
Comment 2 Thomas McGuire 2009-05-31 20:28:46 UTC
SVN commit 976039 by tmcguire:

After renaming sending accounts, make sure the list of sending accounts is up-to-date.

Patch by Frank Thieme <frank at fthieme dot net, thanks!
http://reviewboard.kde.org/r/765
BUG: 185069


 M  +6 -1      transportmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=976039
Comment 3 Thomas McGuire 2009-06-03 15:32:40 UTC
SVN commit 977081 by tmcguire:

Crossport r976039 by tmcguire from trunk to the enterprise4 branch:

After renaming sending accounts, make sure the list of sending accounts is up-to-date.

Patch by Frank Thieme <frank at fthieme dot net, thanks!
http://reviewboard.kde.org/r/765
BUG: 185069



 M  +6 -1      transportmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=977081