After renaming sending accounts, make sure the list of sending accounts is up-to-date.

Patch by Frank Thieme <frank at fthieme dot net, thanks!
http://reviewboard.kde.org/r/765
BUG: 185069

svn path=/trunk/KDE/kdepimlibs/; revision=976039